--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <p>Chalmersgatan Göteborg</p> 
                                     <h3>Telefonnummer</h3>
                                     <p>+460000000</p>
-                                    <h3>Email</h3>
+                                    <h3>E-mail</h3>
                                     <p class="pkontakt">kontakt@kontakt.com</p>
                                 </div>
                             </fieldset>
@@ -110,27 +110,27 @@
                         <div class="kontakt2-form">
                             <fieldset class="insideformdiv" style=" background-color: rgba(141, 121, 56, 0.377); border: 1px solid #A87B40;">
                                 <form name="forM" action="tack.html" id="theform" onsubmit="return validateForm()" method="post">
-                                    <div class="form">
-                                    <div class="cont">
-                                            <label for="namn">Ditt förnämn:</label>
-                                            <input id="namn" name="name" type="text" placeholder="Förnamn"/>
+                                   <div class="form">
+                                        <div class="cont">
+                                            <label for="name"> Förnamn:</label>
+                                            <input name="name" type="text" placeholder="Förnamn"/>
                                         </div>
                                         <div class="cont">
-                                            <label for="efter-namn">Ditt efternämn:</label>
-                                            <input id="efter-namn" name="efternamn" type="text" placeholder="Efternamn"/>
+                                            <label for="efter-namn">Ditt efternamn:</label>
+                                            <input id="efter-Namn" name="efternamn" type="text" placeholder="Efternamn"/>
                                             <small></small>
                                         </div>
                                         <div class="cont">
-                                            <label for="emejl">Ditt mail:</label>
-                                            <input id="emejl" name="email" type="email" placeholder="E-postadress"/>
+                                            <label for="email">Din E-mail:</label>
+                                            <input id="Email" name="email" type="email" placeholder="E-postadress" labee/>
                                             <small></small>
                                         </div>
                                         <div class="cont">
-                                            <label for="mess">Sckika meddelande:</label>
-                                            <textarea id="mess" name="message" placeholder="Meddelandet" ></textarea>
+                                            <label for="message">Skicka meddelande:</label>
+                                            <textarea name="message" placeholder="Meddelande" ></textarea>
                                         </div>
                                         <div class="cont">
-                                            <input class="skickatext" type="submit" value="Skicka meddelandet"/>
+                                            <input class="skickatext" type="submit" value="Skicka meddelande"/>
                                         </div>
                                     </div>
                                 </form>
