--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 <div class="vertical-center">
                                     <section>
                                         <h2 class="index-banner-h2">Rock N Roll</h2>
-                                        <h3>Vi ska turé på sommar!</h3><br/>
+                                        <h3>Vi ska turné på sommar!</h3><br/>
                                         <h2 class="index-h2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sed venenatis lorem. Fusce id metus euismod, consequat tellus eu, commodo mi.</h2>
                                     </section>
                                 </div>
@@ -68,19 +68,19 @@
                     <div class="album">
                         <div class="album-inside">
                             <p>Album 1 (datum) </p>
-                            <img src="img/album1.jpg" alt="a tape" class="album-img">
+                            <img src="img/album1.jpg" alt="a tape" class="album-img" width="600" height="400" >
                         </div>
                         <div class="album-inside">
                             <p>Album 2 (datum) </p>
-                            <img src="img/album2.jpg" alt="a tape" class="album-img">
+                            <img src="img/album2.jpg" alt="a tape" class="album-img" width="600" height="400" >
                         </div>
                         <div class="album-inside"> 
                             <p>Album 3 (datum) </p>
-                            <img src="img/album3.jpg" alt="a tape" class="album-img">
+                            <img src="img/album3.jpg" alt="a tape" class="album-img" width="600" height="400" >
                         </div>
                         <div class="album-inside">
                             <p>Album 4 (datum) </p>
-                            <img src="img/album4.jpg" alt="a tape" class="album-img">
+                            <img src="img/album4.jpg" alt="a tape" class="album-img" width="600" height="400" >
                         </div>
                     </div>
                 </div><!--Album music lådan slutar här-->   
