--- a/index.html
+++ b/index.html
@@ -112,24 +112,25 @@
                                 <form name="forM" action="tack.html" id="theform" onsubmit="return validateForm()" method="post">
                                    <div class="form">
                                         <div class="cont">
-                                            <label for="name"> Förnamn:</label>
-                                            <input name="name" type="text" placeholder="Förnamn"/>
+                                            <label for="Förnamn"> Förnamn:</label>
+                                            <input name="Förnamn" type="text" placeholder="Förnamn"/>
                                         </div>
                                         <div class="cont">
-                                            <label for="efter-namn">Ditt efternamn:</label>
-                                            <input id="efter-Namn" name="efternamn" type="text" placeholder="Efternamn"/>
+                                            <label for="Efternamn">Ditt efternamn:</label>
+                                            <input id="Efternamn" name="Efternamn" type="text" placeholder="Efternamn"/>
                                             <small></small>
                                         </div>
                                         <div class="cont">
-                                            <label for="email">Din E-mail:</label>
-                                            <input id="Email" name="email" type="email" placeholder="E-postadress" labee/>
+                                            <label for="E-postadress">Din E-mail:</label>
+                                            <input id="E-postadress" name="E-postadress" type="email" placeholder="E-postadress"/>
                                             <small></small>
                                         </div>
                                         <div class="cont">
-                                            <label for="message">Skicka meddelande:</label>
-                                            <textarea name="message" placeholder="Meddelande" ></textarea>
+                                            <label for="Meddelande">Skicka meddelande:</label>
+                                            <textarea name="Meddelande" placeholder="Meddelande" ></textarea>
                                         </div>
                                         <div class="cont">
+                                            <label for="skickatext">Skicka meddelande:</label>
                                             <input class="skickatext" type="submit" value="Skicka meddelande"/>
                                         </div>
                                     </div>
