--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                    <div class="form">
                                         <div class="cont">
                                             <label for="Förnamn"> Förnamn:</label>
-                                            <input name="Förnamn" type="text" placeholder="Förnamn"/>
+                                            <input id="Förnamn" name="Förnamn" type="text" placeholder="Förnamn"/>
                                         </div>
                                         <div class="cont">
                                             <label for="Efternamn">Ditt efternamn:</label>
@@ -127,11 +127,11 @@
                                         </div>
                                         <div class="cont">
                                             <label for="Meddelande">Skicka meddelande:</label>
-                                            <textarea name="Meddelande" placeholder="Meddelande" ></textarea>
+                                            <textarea id="Meddelande" name="Meddelande" placeholder="Meddelande" ></textarea>
                                         </div>
                                         <div class="cont">
                                             <label for="skickatext">Skicka meddelande:</label>
-                                            <input class="skickatext" type="submit" value="Skicka meddelande"/>
+                                            <input id="skickatext" class="skickatext" type="submit" value="Skicka meddelande"/>
                                         </div>
                                     </div>
                                 </form>
